hometask_5 add night mode style

--- a/app/src/main/res/drawable/bg_counter.xml
+++ b/app/src/main/res/drawable/bg_counter.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="10dp"/>
-        <solid android:color="@color/color_indicator"/>
+        <solid android:color="?attr/colorCounterBackground"/>
     </shape>
 </item>
 </selector>
