--- a/app/src/main/res/drawable/bg_indicator.xml
+++ b/app/src/main/res/drawable/bg_indicator.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/color_green"/>
+            <solid android:color="?attr/colorOnlineIndicator"/>
             <stroke android:width="2dp" android:color="@android:color/white"/>
         </shape>
     </item>
