--- a/app/src/main/res/layout/item_chat_group.xml
+++ b/app/src/main/res/layout/item_chat_group.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/item_size"
         android:padding="@dimen/spacing_normal_16"
-        android:background="@android:color/white">
+        android:background="?attr/colorItemBackground">
     <ru.skillbranch.devintensive.ui.custom.CircleImageView
             android:id="@+id/iv_avatar_group"
             android:layout_width="@dimen/avatar_item_size"
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text = "Chat title"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorItemTextTitle"
             android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             android:layout_toEndOf="@id/iv_avatar_group"
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text = "John_Doe"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorItemTextTitle"
             android:textSize="14sp"
             android:layout_toRightOf="@id/iv_avatar_group"
             android:layout_marginRight="@dimen/spacing_tiny_4"
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text = "Когда я проходил интенсив"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorItemTextMessage"
             android:textSize="14sp"
             android:layout_toRightOf="@id/tv_message_author"
             android:layout_toLeftOf="@id/tv_counter_group"
@@ -57,7 +57,7 @@
             android:textSize="10sp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorItemTextMessage"
             tools:text="10:03"/>
     <TextView
             android:id="@+id/tv_counter_group"
