--- a/app/src/main/res/layout/item_chat_single.xml
+++ b/app/src/main/res/layout/item_chat_single.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/item_size"
         android:padding="@dimen/spacing_normal_16"
-        android:background="@android:color/white">
+        android:background="?attr/colorItemBackground">
     <ru.skillbranch.devintensive.ui.custom.CircleImageView
             android:id="@+id/iv_avatar_single"
             android:layout_width="@dimen/avatar_item_size"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text = "Chat title"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorItemTextTitle"
             android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             android:layout_toEndOf="@id/iv_avatar_single"
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text = "Когда я проходил интенсив, я успел побывать в отпуске, между занятиями."
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorItemTextMessage"
             android:fontFamily="sans-serif"
             android:textSize="14sp"
             android:layout_below="@id/tv_title_single"
@@ -53,7 +53,7 @@
             android:textSize="10sp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorItemTextMessage"
             tools:text="10:03"/>
     <TextView
             android:id="@+id/tv_counter_single"
