--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,6 @@
     <color name="color_primary_light">#473770</color>
 
     <color name="color_accent">#FC4C4C</color>
-    <color name="color_accent_night">#2196F3</color>
 
     <color name="color_accent_secondary">#BEAC32EE</color>
     <color name="color_gray">#9CA9BA</color>
@@ -17,4 +16,19 @@
     <color name="color_indicator">#581F99</color>
     <color name="color_green">#4FD149</color>
 
+    <color name="color_item_background">#FFFFFF</color>
+    <color name="color_item_title">#2A1956</color>
+    <color name="color_item_message">#675F7F</color>
+    <!--####################################################-->
+
+    <color name="color_primary_night">#272727</color>
+    <color name="color_primary_dark_night">#2196F3</color>
+
+    <color name="color_accent_night">#2196F3</color>
+
+    <color name="color_item_background_night">#1D1D1D</color>
+    <color name="color_item_title_night">#FFFFFF</color>
+    <color name="color_item_message_night">#9CA9BA</color>
+
+    <color name="color_indicator_night">#675F7F</color>
 </resources>
