--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,12 +10,14 @@
     <attr name="colorIcon" format="reference"/>
 
     <attr name="colorItemBackground" format="reference"/>
+    <attr name="colorItemBackside" format="reference"/>
     <attr name="colorOnlineIndicator" format="reference"/>
     <attr name="colorItemTextTitle" format="reference"/>
     <attr name="colorItemTextMessage" format="reference"/>
     <attr name="colorCounterBackground" format="reference"/>
     <attr name="colorDoneIcon" format="reference"/>
     <attr name="colorAppBar" format="reference"/>
+    <attr name="colorItemSelectedBackground" format="reference"/>
 
     <declare-styleable name="CircleImageView">
         <attr name="cv_borderColor" format="color"/>
